<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.bytecoders.iptvservice.mobileconfig.ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/connection_status">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/playlist_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:elevation="@dimen/cardview_elevation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_small">

                    <TextView
                        android:id="@+id/iptv_url_tv"
                        style="@style/AppTheme.LabelText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:text="@string/iptv_url" />

                    <EditText
                        android:id="@+id/iptv_url"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:text="@={viewmodel.m3uURL}" />

                    <TextView
                        android:id="@+id/epg_url_tv"
                        style="@style/AppTheme.LabelText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:text="@string/epg_url" />

                    <EditText
                        android:id="@+id/epg_url"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:text="@={viewmodel.epgURL}" />

                    <ProgressBar
                        android:id="@+id/progressbarPredict"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:progress="@{viewmodel.downloadProgress}"
                        tools:progress="50" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <Button
                            android:id="@+id/download_list"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/button_margin"
                            android:layout_weight="1"
                            android:onClick="@{() -> viewmodel.downloadList()}"
                            android:text="@string/download" />

                        <Button
                            android:id="@+id/send_list"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/button_margin"
                            android:layout_weight="1"
                            android:onClick="@{() -> viewmodel.sendList()}"
                            android:text="@string/send" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:elevation="@dimen/cardview_elevation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/playlist_cardview">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_small"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/channels"
                        style="@style/AppTheme.LabelText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_small"
                        android:gravity="center"
                        android:importantForAutofill="no"
                        android:text="@{viewmodel.channelsText}"
                        tools:text="300 channels" />

                    <TextView
                        android:id="@+id/errors"
                        style="@style/AppTheme.LabelText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_small"
                        android:gravity="center"
                        android:importantForAutofill="no"
                        android:text="@{viewmodel.errorText}"
                        tools:text="3 errors" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/connection_status"
            style="@style/AppTheme.LabelText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:importantForAutofill="no"
            app:service_status="@{viewmodel.serviceStatus}"
            tools:text="Connected to TV" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>